# screenshot_documenter

./: LICENSE  README.md  pyproject.toml  requirements.txt  take_screenshots
documenter/: __main__.py  coordinates.py  grab_screenshot.py  listeners.py  runner.py
