[project]
name = "fish_analysis"
version = "0.0.1"
authors = [
  { name="Nicolai Karcher", email="karchernic@gmail.com" },
]
description = "BLANK"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
